# lxp-bridge

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.ci  LICENSE  Makefile  README.md  build.rs  config.yaml  config.yaml.example  docker-compose.yaml.example  repository.json  repository.yaml  server_test.rb
.github/workflows/: build.yaml  docker-dev.yaml  docker_test.yaml  lint.yaml  release.yaml  rust-clippy.yml
addon/: CHANGELOG.md  Dockerfile  README.md  config.yaml  run.sh
addon.dev/: README.md  config.yaml
ci/: Dockerfile  docker-buildx-platform-setup.sh
db/migrations/mysql/: 20220319140548_create_inputs_table.sql  20220626073732_add_read_inputs_all_fields.sql  20220829211933_add_eps_powers.sql  20221124082500_make_read_inputs_3_nullable.sql  20221210105500_drop_v_pv.sql  20230818110600_add_net_powers.sql
db/migrations/postgres/: 20220319140548_create_inputs_table.sql  20220626073732_add_read_inputs_all_fields.sql  20220829211933_add_eps_powers.sql  20221124082500_make_read_inputs_3_nullable.sql  20230822211000_add_faults_and_warnings.sql
db/migrations/sqlite/: 20220319140548_create_inputs_table.sql  20220626073732_add_read_inputs_all_fields.sql  20220829211933_add_eps_powers.sql  20221124083200_recreate_inputs_table.sql  20230818110600_add_net_powers.sql  20230822211000_add_faults_and_warnings.sql
doc/: LXP_REGISTERS.txt  database.md  faq.md  inputs.md  inverter_setup.md
integration_tests/: .gitignore  .rspec  .rubocop.yml  Gemfile  README.md  lxp-bridge.config.yaml
integration_tests/fixtures/: read_hold_12_ok.packet.json  read_inputs_0_to_39_ok.decoded.json  read_inputs_0_to_39_ok.packet.json  read_inputs_40_to_79_ok.decoded.json  read_inputs_40_to_79_ok.packet.json  read_inputs_80_to_119_ok.decoded.json  read_inputs_80_to_119_ok.packet.json
integration_tests/fixtures/cmds/: read_hold_12.json  read_input_0.json  read_input_40.json  read_input_80.json
integration_tests/proxy/: Dockerfile  proxy.rb
integration_tests/spec/: ha_discovery_spec.rb  inverter_comms_spec.rb  spec_helper.rb
integration_tests/spec/support/: inverter.rb
migrations/: 20220319140548_create_inputs_table.sql
src/: channel.rs  channels.rs  command.rs  config.rs  coordinator.rs  database.rs  home_assistant.rs  influx.rs  lib.rs  main.rs  mqtt.rs  notify.rs  options.rs  prelude.rs  register_cache.rs  scheduler.rs  types.rs  unixtime.rs  utils.rs
src/coordinator/: mod.rs
src/coordinator/commands/: mod.rs  read_hold.rs  read_inputs.rs  (+7 more)
src/lxp/: inverter.rs  mod.rs  packet.rs  packet_decoder.rs  packet_old.rs  register_parser.rs
systemd/: lxp-bridge.service
tests/: common.rs  test_config.rs  test_coordinator.rs  test_coordinator_commands_read_hold.rs  test_coordinator_commands_read_inputs.rs  test_coordinator_commands_read_param.rs  test_coordinator_commands_set_hold.rs  test_coordinator_commands_time_sync.rs  test_coordinator_commands_update_hold.rs  test_coordinator_read_inputs.rs  test_database.rs  test_home_assistant.rs  test_influx.rs  test_inverter.rs  test_mqtt_message.rs  test_packet_read_inputs.rs  test_packet_tcp_frames.rs
