[package]
name = "lxp-bridge"
version = "0.2.0"
authors = ["Chris Elsworth <chris@cae.me.uk>"]
edition = "2018"
repository = "https://github.com/celsworth/lxp-bridge"

[dependencies]
anyhow = "~1"
bytes = "~1"
crc16 = "~0.4"
env_logger = { version = "~0.8", default-features = false, features = [] }
futures = "~0.3"
log = "~0.4"
net2 = "~0.2"
nom = "~6"
nom-derive = "~0.9"
num_enum = "~0.5"
rumqttc = "~0.8"
serde = { version = "~1 ", features = ["derive"] }
serde_json = "~1"
serde_yaml = "~0.8"
tokio = { version = "~1", features = ["net"] }
tokio-util = { version = "~0.6", features = ["codec"] }
structopt = { version = "~0.3", default-features = false }
chrono = "~0.4"
enum_dispatch = "~0.3"
# git repo fork specified for tokio 1.0 compatibility
influxdb = { version = "~0.4", features = ["derive"], git = "https://github.com/celsworth/influxdb-rust" }

openssl = { version = "~0.10", features = ["vendored"] }

