[package]
name = "lxp-bridge"
version = "0.6.0"
authors = ["Chris Elsworth <chris@cae.me.uk>"]
edition = "2018"
repository = "https://github.com/celsworth/lxp-bridge"

[dependencies]
anyhow = "~1"
bytes = "~1"
crc16 = "~0.4"
env_logger = { version = "~0.9", default-features = false, features = [] }
futures = "~0.3"
log = "~0.4"
net2 = "~0.2"
nom = "~7"
nom-derive = "~0.10"
num_enum = "~0.5"
rumqttc = "~0.10"
serde = { version = "~1 ", features = ["derive"] }
serde_json = "~1"
serde_yaml = "~0.8"
tokio = { version = "~1", features = ["net"] }
tokio-util = { version = "~0.6", features = ["codec"] }
structopt = { version = "~0.3", default-features = false }
chrono = "~0.4"
enum_dispatch = "~0.3"
async-trait = "~0.1"
reqwest = "~0.11"
rinfluxdb = { version = "~0.1", git = "https://gitlab.com/celsworth/rinfluxdb.git", branch = "celsworth-master-patch-81884" }
