[package]
name = "lxp-bridge"
version = "0.14.0-dev"
authors = ["Chris Elsworth <chris@cae.me.uk>"]
edition = "2021"
repository = "https://github.com/celsworth/lxp-bridge"

[[bin]]
name = "lxp-bridge"
path = "src/main.rs"

[lib]
name = "lxp_bridge"
path = "src/lib.rs"

[features]
mocks = []

[dev-dependencies]
mockito = "*"

[dependencies]
anyhow = "~1"
bytes = "~1"
clap = { version = "=4.4.18", features = ["derive"] }
crc16 = "~0.4"
env_logger = { version = "~0.10", default-features = false, features = [] }
futures = "~0.3"
log = "~0.4"
net2 = "~0.2"
nom = "~7"
nom-derive = "~0.10"
num_enum = "~0.5"
rumqttc = "~0.20"
serde = { version = "~1 ", features = ["derive"] }
serde_with = "~2"
serde_json = "~1"
serde_yaml = "~0.9"
tokio = { version = "~1", features = ["net", "macros", "signal"] }
tokio-util = { version = "~0.7", features = ["codec"] }
chrono = "~0.4"
cron-parser = "~0.7"
enum_dispatch = "~0.3"
async-trait = "~0.1"
reqwest = "~0.11"
rinfluxdb = { version = "~0.1", git = "https://gitlab.com/celsworth/rinfluxdb.git", rev = "f3f5b23e" }
sqlx = { version = "~0.6", features = ["runtime-tokio-native-tls", "any", "postgres", "mysql", "sqlite", "chrono"] }
